(fixup) Make logger optional

--- a/bundle/Resources/config/services.yml
+++ b/bundle/Resources/config/services.yml
@@ -9,6 +9,6 @@ services:
             - '@ezpublish.api.service.location'
             - '@ezpublish.api.service.content_type'
             - '@ezpublish.api.service.content'
-            - '@logger'
         calls:
             - [setConfiguration, ['$content;content_on_the_fly$']]
+            - [setLogger, ['@?logger']]
