(fixup) Pick first defined language as one used in dummy new content

--- a/bundle/Resources/config/services.yml
+++ b/bundle/Resources/config/services.yml
@@ -12,3 +12,4 @@ services:
         calls:
             - [setContentConfiguration, ['$content;content_on_the_fly$']]
             - [setLogger, ['@?logger']]
+            - [setLanguages, ['$languages$']]
