--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
 	}
     },
     "require": {
+    	"ezsystems/platform-ui-bundle": "^1.3",
         "ezsystems/ezpublish-kernel": "^6.3"
     },
     "extra": {
