--- a/bundle/Resources/config/routing.yml
+++ b/bundle/Resources/config/routing.yml
@@ -1,5 +1,5 @@
 contentonthefly.location_controller.suggested:
-    path: /contentonthefly/locations/{content}
+    path: /contentonthefly/locations/{contentTypeIdentifier}
     defaults:
         _controller: contentonthefly.controller.location:suggestedAction
     methods: [GET]
