[Composer] Bump requirement for platform-ui-bundle
Depends on several improvements in platform-ui-bundle made in 1.4, including sub items and load more features.

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 	}
     },
     "require": {
-    	"ezsystems/platform-ui-bundle": "^1.3",
+    	"ezsystems/platform-ui-bundle": "^1.4@beta",
         "ezsystems/ezpublish-kernel": "^6.3"
     },
     "extra": {
