--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 	}
     },
     "require": {
-    	"ezsystems/platform-ui-bundle": "^1.4@beta",
+    	"ezsystems/platform-ui-bundle": "^1.4",
         "ezsystems/ezpublish-kernel": "^6.3"
     },
     "extra": {
