--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
     	"ezsystems/platform-ui-bundle": "^1.4",
         "ezsystems/ezpublish-kernel": "^6.3"
     },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.1"
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "0.1.x-dev"
