--- a/behat_suites.yml
+++ b/behat_suites.yml
@@ -5,5 +5,6 @@ contentOnTheFly:
               filters: 
                 tags: common
               contexts:
+                  - EzSystems\StudioUIBundle\Features\Context\StudioUI
                   - EzSystems\FlexWorkflowBundle\Features\Context\FlexWf
                   - EzSystems\EzContentOnTheFlyBundle\Features\Context\ContentOnTheFlyContext
