--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "ezsystems/ezpublish-kernel": "^6.3"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.1"
+        "friendsofphp/php-cs-fixer": "~2.7.1"
     },
     "extra": {
         "branch-alias": {
