--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.7.1"
     },
+    "scripts": {
+        "fix-cs": "@php ./vendor/bin/php-cs-fixer fix -v --show-progress=estimating"
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "0.1.x-dev"
