--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "ezsystems/ezpublish-kernel": "^6.3"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.1"
+        "friendsofphp/php-cs-fixer": "~2.7.1"
+    },
+    "scripts": {
+        "fix-cs": "@php ./vendor/bin/php-cs-fixer fix -v --show-progress=estimating"
     },
     "extra": {
         "branch-alias": {
